crates/toml_edit/fixtures/invalid/table/duplicate-table-array.stderr
TOML parse error at line 2, column 1
  |
2 | [[tbl]]
  | ^
Invalid table header
Duplicate key `tbl` in document root
